test/spec_vectors/simd_f32x4_cmp/fail/module_3.wat
(module (func (result v128) (f32x4.gt (i64.const 0) (f64.const 0))))